apps/jenkins-regression-test-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-regression-test-1
  namespace: dev
  labels:
    app: jenkins-regression-test-1
    backstage.io/kubernetes-id: jenkins-regression-test-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-regression-test-1
  template:
    metadata:
      labels:
        app: jenkins-regression-test-1
        backstage.io/kubernetes-id: jenkins-regression-test-1
        environment: dev
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: jenkins-regression-test-1
        tags.datadoghq.com/version: "1.0"
    spec:
      containers:
        - name: jenkins-regression-test-1
          image: jaykumark7/jenkins-regression-test-1:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
