apps/jenkins-regression-test-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-regression-test-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: jenkins-regression-test-1
spec:
  selector:
    app: jenkins-regression-test-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
