apps/jenkins-regression-test-1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-regression-test-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: jenkins-regression-test-1
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /jenkins-regression-test-1-dev
            pathType: Prefix
            backend:
              service:
                name: jenkins-regression-test-1
                port:
                  number: 80
